# MountainCar-v0

./: README.md  pyproject.toml
src/: ga.py  main.py  notes.md  policy.py  utils.py
src/experiments/: compare_results.py  logs.txt  logs1.txt  logs2.txt  results.py
src/experiments/outputs/: fitness_baseline_hidden.csv  fitness_high_crossover_rate_hidden.csv  fitness_high_mutation_hidden.csv  fitness_large_population_hidden.csv  fitness_small_population_hidden.csv
