[tool.poetry]
name = "genetic-mountaincar"
version = "0.1.0"
description = "Genetic Algorithm applied to Gymnasium MountainCar-v0"
authors = ["Your Team <your_email@example.com>"]
readme = "README.md"
packages = [{include = "src"},
    { include = "experiments", from = "src" }]

[tool.poetry.dependencies]
python = "^3.10"
gymnasium = {extras = ["classic-control"], version = "^1.2.0"}
numpy = "^1.26.4"
matplotlib = "^3.9.0"
pandas = "^2.3.2"
seaborn = "^0.13.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
black = "^24.3.0"
